--- a/default.hbs
+++ b/default.hbs
@@ -39,8 +39,6 @@
   <main class="site-content" role="main">
     {{{body}}}
   </main>
-  <footer class="site-footer">
-    {{ghost_foot}}
-  </footer>
+  <footer class="site-footer">{{ghost_foot}}</footer>
 </body>
 </html>
